# FastAPI_Course

./: .gitignore  README.md  blog.db  pyproject.toml
.op/plugins/: openai.json
01_Hello_World/app/: index.html  main.py
02-Path_Params/app/: index.html  main.py  test_path_params.http
03-Query_Params/app/: index.html  main.py
04-Pydantic/: Pydantic_Basics.ipynb  README.md  models.py
04-Pydantic/app/: Pydantic_Guide_Summary-dev.ipynb  README-models.md  README.md  exceptions.py  main-v2.py  main.py  models.ipynb  models.py  notes-dev.md  routes.py  schemas.py  test_requests.py  utils.py
04-Pydantic/app-dev/: main.py
04-Pydantic_Basics/: Pydantic_Basics.ipynb  models.py
04-Pydantic_Basics/app/: main.py  test_requests.py
04.2-Pydantic_FastAPI/app/: main.py  test-api.http  test_main.py
05-Error_Handling/app/: main.py
05-Pydantic_FastAPI/app/: models.py
05-Pydantic_SQLAlchemy/app/: database.py  main.py  models_db.py
06-DB_SQLAlchemy/: README.md
06-DB_SQLAlchemy/app/: 06-test.http  generate_data.py  index.html  main.py  test_blog.py  test_main.py
06-Error_Handling/app/: main.py  test_requests.py  test_response.py
06-Pydantic_FastAPI_Blog/app/: main.py
07_SQLModel_Basics/: README.md  sqlmodel_basics.py
07_SQLModel_FastAPI_Basics/: README.md  tutorial.db
08_SQLModel_Blog/: README.md  sql_model_uml_with_relationships  uml_diagram.py
08_SQLModel_FastAPI_Basics/: sqlmodel_basics.py
10-Request_Body/: main-v2.py  main-v3.py  main.py
Blog_app/: database.db  main.py
Blog_app copy/: blog.db  create_db.py  fastapi_blog.py  home.html
(+53 files in other folders)
