[tool.poetry]
name = "fastapi-course"
version = "0.1.0"
description = ""
authors = ["James <jamesbrendamour7@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
langchain-chroma = "^0.1.4"
faiss-cpu = "^1.9.0.post1"
duckdb = "^1.1.3"
langchain-redis = "^0.1.1"
langchain-openai = "^0.2.11"
langchain-community = "^0.3.9"
langchain-ollama = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
